--- a/hybridsearchinrag.ipynb
+++ b/hybridsearchinrag.ipynb
@@ -65,7 +65,7 @@
     "from pinecone import Pinecone\n",
     "\n",
     "# Initialize Pinecone\n",
-    "pc = Pinecone(api_key=\"pcsk_4NFame_8SkhCkNEXDkYY9FvaoMa9taK5qyERjLJvgJ2GRqC9JURNTaZA4kvd8SR6RjbvxL\", environment=\"us-east-1\")\n",
+    "pc = Pinecone(api_key=\"XXXXXXXXXXXXXXXXX\", environment=\"us-east-1\")\n",
     "\n",
     "index_name = \"hybrid-search-langchain-pinecone\"\n",
     "\n",
